<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuFragment">

    <LinearLayout
        android:id="@+id/check_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/purple_200">

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/veggies"
            android:id="@+id/veggies_check"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:textColor="@color/green"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:id="@+id/non_veggies_check"
            android:layout_height="wrap_content"
            android:text="@string/non_veggies"
            android:textColor="@color/red"/>


    </LinearLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_below="@id/check_holder"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>